[tool.poetry]
name = "pcd"
version = "0.1.0"
description = ""
authors = ["Tim S <rndmit@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pcdf = {path = "../"}
kubemodels = {path = "../.local/pkg/kubemodels"}


pyyaml = "^6.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pcd = "pcd.__main__:cli"